frontend/test/should_fail/method_model_inh_ovrrd_failnf2.grg
#using "method_model_inh_ovrrd_failnf2.gm"
